[project]
name = "ha_routines"
version = "0.1.0"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "B",
    "C4",
    "E",
    "F",
    "I",
    "N",
    "UP",
    "W",
]
ignore = [
    "N818",
]

[tool.ruff.lint.isort]
known-first-party = ["custom_components.ha_routines"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
check_untyped_defs = true
disallow_incomplete_defs = true
warn_return_any = false
files = ["custom_components/ha_routines"]
exclude = ["custom_components/ha_routines/tests", "tests"]

[[tool.mypy.overrides]]
module = "homeassistant.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "voluptuous"
ignore_missing_imports = true
